--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
     "ethers": "^5.5.4",
+    "plotly": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly": "^1.0.0",
+    "react-plotly.js": "^2.5.1",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.3",
     "vite": "^2.3.8"
   }
 }
