--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "ReplitReactjsProject",
+  "name": "Dataset Name Service",
+  "homepage": "https://github.com/ries9112/polygon_domain_name_frontend",
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@vitejs/plugin-react-refresh": "^1.3.0",
     "ethers": "^5.5.4",
+    "gh-pages": "^3.2.3",
     "plotly": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-plotly": "^1.0.0",
     "react-plotly.js": "^2.5.1",
     "react-table": "^7.7.0",
+    "save-dev": "^0.0.1-security",
     "styled-components": "^5.3.3",
     "vite": "^2.3.8"
   }
